--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,11 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Django migrations
+**/migrations/**
+**/migrations
+**/migrations/__init__.py
+
 # Flask stuff:
 instance/
 .webassets-cache
