--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.0.2
 appnope==0.1.0
 asgiref==3.3.1
+attrs==20.3.0
 backcall==0.2.0
 billiard==3.6.3.0
 celery==5.0.2
@@ -9,33 +10,54 @@ chardet==3.0.4
 click==7.1.2
 click-didyoumean==0.0.3
 click-repl==0.1.6
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==4.4.2
 Django==3.1.3
 django-celery-beat==2.1.0
 django-oauth-toolkit==1.3.3
+django-rest-swagger==2.2.0
 django-timezone-field==4.0
 djangorestframework==3.12.2
+drf-yasg==1.20.0
 idna==2.10
+inflection==0.5.1
 ipython==7.19.0
 ipython-genutils==0.2.0
+itypes==1.2.0
 jedi==0.17.2
+Jinja2==2.11.2
+jsonschema==3.2.0
 kombu==5.0.2
+MarkupSafe==1.1.1
 newsapi-python==0.2.6
+oauth2-provider==0.0
 oauthlib==3.1.0
+openapi-codec==1.3.2
+packaging==20.4
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.8
+psycopg2==2.8.6
 ptyprocess==0.6.0
 Pygments==2.7.2
+pyparsing==2.4.7
+pyrsistent==0.17.3
 python-crontab==2.5.1
 python-dateutil==2.8.1
 pytz==2020.4
+PyYAML==5.3.1
 redis==3.5.3
 requests==2.25.0
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
+simplejson==3.17.2
 six==1.15.0
 sqlparse==0.4.1
+swagger-spec-validator==2.7.3
 traitlets==5.0.5
+uritemplate==3.0.1
 urllib3==1.26.2
 vine==5.0.0
 wcwidth==0.2.5
